write "From " delimiter line  with correct dateTime format

Fix writing dateTime field in the "From " delimiter line according
to RFC4155

BUG: 297198
FIXED-IN: 4.13
REVIEW: 116975